# robot

./: .gitignore  README.md  fix_bug.txt  map1.pgm  map1.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/go2_core/share/go2_core/: local_setup.sh  package.sh
install/go2_description/share/go2_description/: local_setup.sh  package.sh
install/go2_description/share/go2_description/launch/: display.launch.py
install/go2_driver/lib/go2_driver/: footprint_to_link  lowstate_to_imu
install/go2_driver/share/go2_driver/: package.sh
install/go2_driver/share/go2_driver/launch/: driver.launch.py
install/go2_navigation2/lib/go2_navigation2/: navToPose
install/go2_navigation2/share/ament_index/resource_index/parent_prefix_path/: go2_navigation2
install/go2_navigation2/share/go2_navigation2/: package.sh
install/go2_navigation2/share/go2_navigation2/config/: nav2_params.yaml
install/go2_perception/lib/go2_perception/: cloud_accumulation  pointcloud_to_laserscan_node
install/go2_perception/share/go2_perception/: local_setup.sh  package.sh
install/go2_slam/share/go2_slam/: package.sh
install/go2_slam/share/go2_slam/config/: mapper_params_online_async.yaml
install/go2_slam/share/go2_slam/launch/: go2_slamtoolbox.launch.py
install/go2_twist_bridge/lib/go2_twist_bridge/: twist_bridge
install/go2_twist_bridge/share/go2_twist_bridge/: local_setup.sh  package.sh
install/high_level_control/share/high_level_control/: package.dsv  package.ps1  package.sh
install/unitree_go2_nav_interfaces/include/unitree_go2_nav_interfaces/unitree_go2_nav_interfaces/msg/: nav_to_pose.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/unitree_go2_nav_interfaces/include/unitree_go2_nav_interfaces/unitree_go2_nav_interfaces/msg/detail/: nav_to_pose__functions.h  nav_to_pose__rosidl_typesupport_fastrtps_c.h  (+5 more)
install/unitree_go2_nav_interfaces/share/unitree_go2_nav_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/unitree_go2_nav_interfaces/share/unitree_go2_nav_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_unitree_go2_nav_interfaces__rosidl_generator_cExport.cmake  export_unitree_go2_nav_interfaces__rosidl_generator_cppExport.cmake  export_unitree_go2_nav_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_unitree_go2_nav_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_cExport-noconfig.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_cExport.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_cppExport.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_introspection_cExport.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  unitree_go2_nav_interfaces__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build
src/apriltag_ros/: CMakeLists.txt
src/apriltag_ros/cfg/: tags_36h11.yaml
src/apriltag_ros/launch/: camera_36h11.launch.yml
src/base/go2_control/: CMakeLists.txt  package.xml
src/base/go2_control/src/: go2_control.cpp  init_position.cpp
src/base/go2_core/launch/: go2_robot_localization.launch.py  go2_start.launch.py
src/base/go2_driver/: CMakeLists.txt
src/base/go2_driver/launch/: driver.launch.py
src/base/go2_driver/rviz/: display.rviz
src/base/go2_driver/src/: driver.cpp  footprint_to_link.cpp  lowstate_to_imu.cpp
src/base/go2_twist_bridge/: CMakeLists.txt
src/base/go2_twist_bridge/include/: sport_model.hpp
src/base/go2_twist_bridge/src/: twist_bridge.cpp
src/client_service/: package.xml  setup.cfg  setup.py
src/client_service/client_service/: main.py
src/client_service/launch/: pub2server.launch.py
src/go2_description/urdf/: go2_description.urdf
src/go2_docking/: CMakeLists.txt  package.xml
src/go2_docking/config/: dock_params.yaml
src/go2_docking/launch/: go2_docking.launch.yaml
src/go2_docking/src/: detected_dock_pose_pub.cpp  start_homming.cpp
src/go2_media/: CMakeLists.txt  package.xml
src/go2_media/config/: camera_config.yaml  camera_config_2.yaml
src/go2_media/src/: front_image_publisher.cpp  go2_media.cpp
src/go2_navigation2/: CMakeLists.txt  package.xml
src/go2_navigation2/config/: camera_infor.yaml  nav2_config.rviz  nav2_params.yaml  nav2_params_dwb.yaml  nav2_params_new.yaml  nav2_params_test.yaml
src/go2_navigation2/launch/: go2_nav2.launch.py
src/go2_navigation2/src/: navToPose.cpp
src/go2_perception/: CMakeLists.txt
src/go2_perception/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
src/go2_perception/launch/: go2_pointcloud.launch.py
src/go2_perception/src/: cloud_accumulation.cpp  pointcloud_to_laserscan_node.cpp
src/go2_slam/config/: mapper_params_online_async.yaml
src/go2_slam/launch/: go2_slamtoolbox.launch.py
src/high_level_control/: CMakeLists.txt
src/high_level_control/src/: high_level_ctrl.cpp
unitree_go2_nav_interfaces/: CMakeLists.txt
(+1 files in other folders)
